# lab

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: main.yml
src/: main.cpp  utils.cpp  utils.h
